box-sizing and position

--- a/index.html
+++ b/index.html
@@ -33,6 +33,24 @@
         hic maxime sint ipsam quaerat illum corrupti esse voluptas magni
         inventore itaque.
       </p>
+      <div class="box-4">
+        <h2>Box 4</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio ex
+          asperiores ratione ea aspernatur, molestiae delectus quos consequatur
+          hic maxime sint ipsam quaerat illum corrupti esse voluptas magni
+          inventore itaque.
+        </p>
+      </div>
+    </div>
+    <div class="box-5">
+      <h2>Box 5</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio ex
+        asperiores ratione ea aspernatur, molestiae delectus quos consequatur
+        hic maxime sint ipsam quaerat illum corrupti esse voluptas magni
+        inventore itaque.
+      </p>
     </div>
   </body>
 </html>
